--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EmberFrame V2 - Web Desktop</title>
-    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
     <div class="desktop" id="desktop">
@@ -13,6 +13,6 @@
         </div>
     </div>
 
-    <script src="/static/js/core/desktop.js"></script>
+    <script src="/js/core/desktop.js"></script>
 </body>
 </html>
